# kir_i4v_random

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
kir_i4v_random/: draw_random.py  draw_stickman.py
kir_i4v_random/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
kir_i4v_random/log/: latest_build
launch/: launch_example1.launch.py  launch_example2.launch.py  launch_try_1.launch.py  launch_try_1.py
